s/eInvoice API/Invoicetronic API

--- a/templates/openapi-generator/csharp/netcore_project.mustache
+++ b/templates/openapi-generator/csharp/netcore_project.mustache
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+<!-- test -->
 
   <PropertyGroup>{{#useGenericHost}}
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo> <!-- setting GenerateAssemblyInfo to false causes this bug https://github.com/dotnet/project-system/issues/3934 -->{{/useGenericHost}}{{^useGenericHost}}
