--- a/templates/openapi-generator/javascript/README.mustache
+++ b/templates/openapi-generator/javascript/README.mustache
@@ -1,4 +1,4 @@
-# JavaScript SDK for the Italian eInvoice API
+# JavaScript SDK for the Invoicetronic API
 
 {{#appDescriptionWithNewLines}}
 {{{.}}}
