--- a/templates/openapi-generator/typescript/README.mustache
+++ b/templates/openapi-generator/typescript/README.mustache
@@ -1,4 +1,4 @@
-# TypeScript SDK for the Italian eInvoice API
+# TypeScript SDK for the Invoicetronic API
 
 {{#appDescriptionWithNewLines}}
 {{{.}}}
