Add Invoicetronic icon to C# SDK package
- Added icon.png file to C# OpenAPI generator template
- Modified netcore_project.mustache to include PackageIcon property
- Icon will now be bundled with the generated C# SDK NuGet package

--- a/templates/openapi-generator/csharp/netcore_project.mustache
+++ b/templates/openapi-generator/csharp/netcore_project.mustache
@@ -23,6 +23,7 @@
     <Nullable>{{#useGenericHost}}enable{{/useGenericHost}}{{^useGenericHost}}annotations{{/useGenericHost}}</Nullable>{{/nrt}}
     <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -63,6 +64,7 @@
     {{/net60OrLater}}
     {{/validatable}}
     <None Include="../../README.md" Pack="true" PackagePath="\"/>
+    <None Include="../../icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
     
 
