--- a/templates/openapi-generator/csharp/netcore_project.mustache
+++ b/templates/openapi-generator/csharp/netcore_project.mustache
@@ -64,7 +64,7 @@
     {{/net60OrLater}}
     {{/validatable}}
     <None Include="../../README.md" Pack="true" PackagePath="\"/>
-    <None Include="../icon.png" Pack="true" PackagePath="\"/>
+    <None Include="../../icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
     
 
