Fix Java SDK Maven jar plugin configuration and update to modern Maven Central publishing
- Fixed Maven jar plugin configuration by separating jar and test-jar goals into distinct executions
- Updated distribution management to use modern Maven Central publishing approach instead of obsolete OSSRH
- Added proper execution IDs to prevent Maven jar plugin classifier conflict
- This resolves the 'You have to use a classifier to attach supplemental artifacts' error

--- a/templates/openapi-generator/java/pom.mustache
+++ b/templates/openapi-generator/java/pom.mustache
@@ -34,17 +34,17 @@
     </developers>
 
     <distributionManagement>
-    <repository>
-      <id>ossrh</id>
-      <name>Central Repository OSSRH</name>
-      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <name>Central Repository OSSRH</name>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>Maven Central Repository</name>
+            <url>https://central.sonatype.com/</url>
+        </repository>
+        <snapshotRepository>
+            <id>central</id>
+            <name>Maven Central Repository</name>
+            <url>https://central.sonatype.com/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <plugins>
@@ -128,13 +128,25 @@
                 <version>3.3.0</version>
                 <executions>
                     <execution>
+                        <id>default-jar</id>
                         <goals>
                             <goal>jar</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>attach-test-jar</id>
+                        <goals>
                             <goal>test-jar</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <mode>development</mode>
+                            <url>${project.url}</url>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
